2009-07-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix linking against `mtalpha-sim/libslc.a' after the toolchain is
	installed.
	
	* tools/lib/mtalpha.mk: Pull libslc.a out of pkgdata_LIBRARIES,
	because otherwise Automake causes the host's "ranlib" utility to
	be run on the archive during installation. Use the DATA target
	instead.

2009-07-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize (more).

	* tools/bin/slc.in (TIMEOUT): Set a large default timeout, so that
	commands can have a chance to terminate by default (the timeout
	value is overriden by `slt').

	* Makefile.am (check-slt): Recurse `make all' only into `tools'
	and `lib'.

2009-07-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimizations in generated code for `ppp' target.
	
	* tools/bin/spp (pppalpha.addswchll): Remove special case for
	`$l1' when adding `swch' at the beginning of a function
	body. Recognize `ldfp' as an instruction that writes to its
	operand.

	* tools/bin/spp (pppalpha.protectend): Do not insert "nop" before
	"end", unless when adding "end" just after a label. This saves a
	cycle in most cases.

2009-07-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in doc.
	
	* doc/HACKING.txt: Fix indent in last note. 

2009-07-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Distribute missing files. Pass `make distcheck' again.
	
	* programs/demo/Makefile.am: Distribute `fibre.sl.d{1,2,3}'.

	* tools/Makefile.am: Distribute `include/fibre.slh'.
	
2009-07-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize the make rules.
	
	* sl.mk: Rename make variable `SLC' to `SLC_RUN', so that rules in
	recursive runs are not confused when $SLC is set (e.g. from `make
	show-vars') in the environment.

	* lib/mtalpha.mk,
	* lib/ptl.mk,
	* lib/seqc.mk,
	* tools/lib/mtalpha.mk,
	* tools/lib/ptl.mk,
	* tools/lib/seqc.mk: Update accordingly.
	
2009-07-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add new rule `check-slt' for the eye candy, since `make check' now