@@ -112,6 +112,12 @@ typedef unsigned long long int  uintmax_t;
 # define INT32_MAX              (2147483647)
 # define INT64_MAX              (__INT64_C(9223372036854775807))
 
+/* Maximum of unsigned integral types.  */
+# define UINT8_MAX               (255)
+# define UINT16_MAX              (65535)
+# define UINT32_MAX              (4294967295U)
+# define UINT64_MAX              (__UINT64_C(18446744073709551615))
+
 /* 7.18.2.2 Limits of minimum-width integer types */
 
 /* Minimum of signed integral types having a minimum size.  */
