@@ -19,14 +19,14 @@ m4_include(cstdint.slh)
 
 m4_define([[get_cycles]],[[({
 #if defined (__i386__)
-  int32_t res[2];
+  int32_t __res__[2];
 #if defined (_LP64)                      // 64 bit mode
   __asm__ __volatile__  (               // serialize (save rbx)
       "xorl %%eax,%%eax \n push %%rbx \n cpuid \n"
       ::: "%rax", "%rcx", "%rdx");
   __asm__ __volatile__  (               // read TSC, store edx:eax in res
       "rdtsc\n"
-      : "=a" (res[0]), "=d" (res[1]) );
+      : "=a" (__res__[0]), "=d" (__res__[1]) );
   __asm__ __volatile__  (               // serialize again
       "xorl %%eax,%%eax \n cpuid \n pop %%rbx \n"
       ::: "%rax", "%rcx", "%rdx");
@@ -36,17 +36,17 @@ m4_define([[get_cycles]],[[({
       ::: "%eax", "%ecx", "%edx");
   __asm__ __volatile__  (               // read TSC, store edx:eax in res
       "rdtsc\n"
-      : "=a" (res[0]), "=d" (res[1]) );
+      : "=a" (__res__[0]), "=d" (__res__[1]) );
   __asm__ __volatile__  (               // serialize again
       "xorl %%eax,%%eax \n cpuid \n popl %%ebx \n"
       ::: "%eax", "%ecx", "%edx");
 #endif
-  *(int64_t*)res;
+  *(int64_t*)__res__;
 #else
 #if defined(__alpha__) || defined(__mtalpha__)
-  int64_t x;
-  __asm__ __volatile__ ("rpcc %0" : "=r"(x) : : "memory");
-  x;
+  int64_t __cycles_c__;
+  __asm__ __volatile__ ("rpcc %0" : "=r"(__cycles_c__) : : "memory");
+  __cycles_c__;
 #else
 # warning Reading the time stamp counter is not defined on your system.
   (int64_t)0;
